--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(img/wallhaven-eyzyko.png);
+    background-image: url();
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
